--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Oatile Mdlela Portfolio</title>
     <link rel="stylesheet" href="style.css"> 
+    <script src="https://kit.fontawesome.com/ade0fe6395.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div id="header">
@@ -14,6 +15,7 @@
                 <ul>
                     <li><a href="#">Home</a></li>
                     <li><a href="#">About</a></li>
+                    <li><a href="#">Services</a></li>
                     <li><a href="#">Projects</a></li>
                     <li><a href="#">Contact Me</a></li>
                 </ul>
@@ -66,6 +68,33 @@
                         </ul>
                     </div>
                 </div>
+            </div>
+        </div>
+    </div>
+
+    <!--services section-->
+    <div id="services">
+        <div class="container">
+            <h1 class="sub-title">Services</h1>
+            <div class="services-list">
+                <div>
+                    <i class="fa-solid fa-code"></i>
+                    <h2>Web Development</h2>
+                    <p>I specialize in providing comprehensive web development services tailored to meet your specific needs and objectives.</p>
+                    <a href="#">Enquire</a>
+                </div>
+                <div>
+                    <i class="fa-solid fa-mobile-screen-button"></i>
+                    <h2>Mobile Development</h2>
+                    <p>I excel in delivering cutting-edge mobile development services, leveraging my expertise to create innovative and user-centric mobile applications tailored to your specific requirements.</p>
+                    <a href="#">Enquire</a>
+                </div>
+                <div>
+                    <i class="fa-solid fa-computer"></i>
+                    <h2>Software Development</h2>
+                    <p>I specialize in delivering high-quality software development services, employing my skills to create efficient and scalable solutions that align with your business goals.</p>
+                    <a href="#">Enquire</a>
+                </div>   
             </div>
         </div>
     </div>
