Projects Section is complete.

--- a/index.html
+++ b/index.html
@@ -98,7 +98,40 @@
             </div>
         </div>
     </div>
-   
+   <!--projects section-->
+   <div id=projects"">
+    <div class="container">
+        <h1 class="sub-title">My Projects</h1>
+        <div class="work-list">
+            <div class="work">
+                <img src="https://appmaster.io/cdn-cgi/image/width=1024,quality=83,format=auto/api/_files/LLCxhb9Mt9zpfsjf2Rhzhc/download/">
+                <div class="layer">
+                    <h3>Scraper API</h3>
+                    <P>ASP.NET Core Web API  that scraps data from websites.</P>
+                    <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
+                </div>
+            </div>
+            <div class="work">
+                <img src="https://images.unsplash.com/photo-1498050108023-c5249f4df085?q=80&w=2072&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
+                <div class="layer">
+                    <h3>ProdCollab</h3>
+                    <P>File Sharing Web App in .NET Core 7.0 that stores data to an AWS S3 bucket.</P>
+                    <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
+                </div>
+            </div>
+            <div class="work">
+                <img src="https://mcdn.wallpapersafari.com/medium/54/79/ZNdWHO.jpg">
+                <div class="layer">
+                    <h3>ExpenseSense</h3>
+                    <P>Kotlin Mobile application designed to assist SASSA grant recipients in South Africa in managing their finances with confidence and ease.</P>
+                    <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
+                </div>
+            </div>
+        </div>
+        <a href="#" class="btn">See more</a>
+    </div>
+   </div>
+
     
     <script>
         var tablinks = document.getElementsByClassName("tab-links");
