Navigation has been fixed.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <nav>
                 <img src="images/logo.png" class="logo">
                 <ul id="sidemenu">
-                    <li><a href="header">Home</a></li>
+                    <li><a href="#header">Home</a></li>
                     <li><a href="#about">About</a></li>
                     <li><a href="#services">Services</a></li>
                     <li><a href="#projects">Projects</a></li>
@@ -83,19 +83,19 @@
                     <i class="fa-solid fa-code"></i>
                     <h2>Web Development</h2>
                     <p>I specialize in providing comprehensive web development services tailored to meet your specific needs and objectives.</p>
-                    <a href="#">Enquire</a>
+                    <a href="#contact">Enquire</a>
                 </div>
                 <div>
                     <i class="fa-solid fa-mobile-screen-button"></i>
                     <h2>Mobile Development</h2>
                     <p>I excel in delivering cutting-edge mobile development services, leveraging my expertise to create innovative and user-centric mobile applications tailored to your specific requirements.</p>
-                    <a href="#">Enquire</a>
+                    <a href="#contact">Enquire</a>
                 </div>
                 <div>
                     <i class="fa-solid fa-computer"></i>
                     <h2>Software Development</h2>
                     <p>I specialize in delivering high-quality software development services, employing my skills to create efficient and scalable solutions that align with your business goals.</p>
-                    <a href="#">Enquire</a>
+                    <a href="#contact">Enquire</a>
                 </div>   
             </div>
         </div>
@@ -110,7 +110,7 @@
                 <div class="layer">
                     <h3>Scraper API</h3>
                     <P>ASP.NET Core Web API  that scraps data from websites.</P>
-                    <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
+                    <a href="https://github.com/OatileM/WebScraperAPI"><i class="fa-solid fa-up-right-from-square"></i></a>
                 </div>
             </div>
             <div class="work">
@@ -126,11 +126,11 @@
                 <div class="layer">
                     <h3>ExpenseSense</h3>
                     <P>Kotlin Mobile application designed to assist SASSA grant recipients in South Africa in managing their finances with confidence and ease.</P>
-                    <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
+                    <a href="https://github.com/OatileM/ExpenseSense"><i class="fa-solid fa-up-right-from-square"></i></a>
                 </div>
             </div>
         </div>
-        <a href="#" class="btn">See more</a>
+        <a href="https://github.com/OatileM" class="btn">See more</a>
     </div>
    </div>
    <!--contact  section-->
