--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                     <a href="https://www.instagram.com/bouzer_za/"><i class="fa-brands fa-instagram"></i></a>
                     <a href="https://github.com/OatileM"><i class="fa-brands fa-github"></i></i></a>
                 </div>
-                <a href="images/Oatile Mdlela CV.pdf" download class="btn btn2">Download CV</a>
+                <a href="images/CV for Oatile Mdlela.pdf" download class="btn btn2">Download CV</a>
             </div>
             <div class="contact-right">
                 <form name="submit-to-google-sheet">
