CV has been updated with new certifications.

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                 <div class="layer">
                     <h3>ProdCollab</h3>
                     <P>File Sharing Web App in .NET Core 7.0 that stores data to an AWS S3 bucket.</P>
-                    <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
+                    <a href="https://github.com/OatileM/ProdCollab"><i class="fa-solid fa-up-right-from-square"></i></a>
                 </div>
             </div>
             <div class="work">
